<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/icon_home_bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/setting"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_19"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_18"
        android:src="@mipmap/icon_setting" />

    <LinearLayout
        android:id="@+id/start_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_140"
        android:layout_below="@+id/setting"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@mipmap/start_create">

        <ImageView
            android:layout_width="@dimen/dp_23"
            android:layout_height="@dimen/dp_23"
            android:layout_marginStart="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_47"
            android:src="@mipmap/edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_46"
            android:gravity="center"
            android:text="@string/start_tv"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_17" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/format_main"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:layout_below="@id/start_edit"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/bg_main_withdraw"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/main_format"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/dp_14"
            app:drawableTopCompat="@mipmap/icon_home_format"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_sound"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:layout_below="@id/start_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/bg_main_withdraw"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/main_change_sound"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/dp_14"
            app:drawableTopCompat="@mipmap/icon_home_format"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/eq_main"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:layout_below="@id/format_main"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/bg_main_withdraw"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_10"
            android:fontFamily="HuaweiSans"
            android:gravity="center"
            android:text="@string/file_api_title"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/dp_14"
            app:drawableTopCompat="@mipmap/icon_home_format"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/extract_main"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:layout_below="@id/start_edit"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="14dp"
        android:background="@drawable/bg_main_withdraw"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/main_withdraw"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/dp_14"
            app:drawableTopCompat="@mipmap/icon_home_withdraw"
            tools:ignore="SpUsage" />
    </LinearLayout>

</RelativeLayout>